# django-places

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  build_files.sh  docker-compose.yaml  entrypoint.sh  package.json  pyproject.toml  requirements.txt  vercel.json
docs/: build_files.sh  commands.md
envs/: .env.example
http/: places.http
src/django_app/: config.py  container.py  routes.py  settings.py  urls.py  wsgi.py
src/modules/places/: admin.py  apps.py  factories.py  filters.py  models.py  serializers.py  urls.py  views.py
src/modules/places/management/commands/: seed_places.py
src/modules/places/migrations/: 0001_enable_postgis_extension.py  0002_initial.py
